2009-08-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c (syms_of_keyboard): Default to 5 buttons, which should be
	enough for the most common situations.  Avoid SET_SYMBOL_VALUE.

2009-08-18  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (xd_add_watch, xd_remove_watch, Fdbus_init_bus):
	New functions.
	(xd_initialize): Revert change from 2009-08-16.

2009-08-18  Kenichi Handa  <handa@m17n.org>

	* fontset.c (Ffontset_font): If a nil element is found in a
	font-group vector, return nil.

2009-08-17  Chong Yidong  <cyd@stupidchicken.com>

	* process.c (status_notify): Don't perform redisplay.
	(Fdelete_process, list_processes_1, process_send_signal):
	Expliticly perform redisplay.
	(wait_reading_process_output): Always check process status, but
	don't perform redisplay unless DO_DISPLAY is non-zero (Bug#2930).

2009-08-17  Ken Raeburn  <raeburn@raeburn.org>

	* lisp.h (XFLOAT_DATA): Produce an rvalue by adding 0 to the value.
	(XFLOAT_INIT): New macro for storing a float value.
	* alloc.c (make_float, make_pure_float): Use XFLOAT_INIT.
	* fns.c (sxhash): Copy out the value of a float in order to
	examine its bytes.
	* dbusbind.c (xd_append_arg): Likewise.

	* emacs.c (main): Don't call syms_of_data twice.

2009-08-16  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (xd_initialize): Add connection file descriptor to
	input_wait_mask, in order to let select() detect, whether a new
	message has been arrived.
	(Fdbus_call_method_asynchronously): Allow nil HANDLER.

2009-08-15  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (xd_get_dispatch_status, xd_pending_messages):
	New functions.

	* lisp.h (xd_pending_messages): Declare.

	* keyboard.c (readable_events): Call xd_pending_messages.

2009-08-15  Chong Yidong  <cyd@stupidchicken.com>

	* eval.c (Fcalled_interactively_p, Finteractive_p): Doc fix (Bug#3936).

	* xdisp.c (pop_it): Don't pop into a display vector (Bug#4131).

	* buffer.c (set_buffer_internal_1)